--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
-        "spatie/laravel-permission": "^3.0"
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^3.0",
+        "yajra/laravel-datatables-oracle": "^9.6"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
