--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/Helpers/HelperMenu.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
