--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
         "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^6.0",
         "spatie/laravel-permission": "^3.0",
         "yajra/laravel-datatables-oracle": "^9.6"
     },
