--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "yajra/laravel-datatables-oracle": "^9.6"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "laravel/ui": "^1.0",
