--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "maatwebsite/excel": "^3.1",
         "mews/purifier": "^3.1",
         "milon/barcode": "^6.0",
+        "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-permission": "^3.0",
         "spatie/laravel-sitemap": "^5.5",
         "tymon/jwt-auth": "^1.0",
